apps/foundry-vtt-tw/base/foundry-vtt-tw_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-tw-ingress
  namespace: foundry-vtt-tw
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gyre.sakagegaming.com`) 
      services:
        - kind: Service
          name: foundry-vtt-tw
          passHostHeader: true
          port: 80
